2018-10-23  Daniel Hawkins
    * common/readable.c: Add "illuminated text" as a religion book name.

2018-10-22  Daniel Hawkins
    * random_maps/style.c: Remove superfluous use of buffer and snprintf.
    * include/global.h,
      common/loader.l,
      common/init.c,
      common/arch.c: Remove ::warn_archetypes and make loader use try_find_archetype.
    * common/recipe.c: Refactor recipe creation to use calloc instead of malloc.

2018-09-24  Daniel Hawkins
    * types/Makefile.am: Add new mimic type file to build.
    * server/ob_types.c: Initialize the apply hook for mimics.
    * include/typesproto.h: Function prototype for apply hook initialization.
    * include/object.h: Add MIMIC type and update max type number.
    * types/mimic/mimic.c: Add code for MIMIC type.
    * common/item.c: Add new type to the table defined here. Make it like container.
    * random_maps/treasure.c: Make a very slim chance of a mimic replacing a chest when diffiuclty > 5.

2018-06-02  Daniel Hawkins
    * server/time.c: Simplify the code for determining the placement of a new object in change_object().

2018-05-31  Daniel Hawkins
    * server/attack.c: Fix double application of resistance for life stealing attacktype.
      Also, add more complex algorithm for slowness to reduce >1 speed sometimes.

2018-05-28  Daniel Hawkins
    * common/living.c: Simplification of bracer/force/armor AC/WC code in fix_object:
      if we don't replace the best value, don't waste time subtracting and adding the same
      value to the object.
      Also, fix bug #823 by directly applying bracer ac and wc for serpentmen players.
    * server/monster.c: Skip performance shortcuts in monster_compute_path for
      multitile monsters.

2018-05-23  Daniel Hawkins
    * server/attack.c: Make death attacks do no damage when the monster cannot
      be affected by that death attack. Also make the order of the strstr check
      work for multiple races defined on the creature, and only one on the weapon.